# R-data-processing

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/reader/: DataSet.h  DataSets.cxx  IDataInput.h  IReadDataSets.h
data/: housing.csv  purchased.csv
python/: run.py  salary.py  startups.py
tests/: CMakeLists.txt  CSVReaderTest.cxx
